--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -5,6 +5,9 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 
+[dependencies]
+uuid = { version = "1.8.0", features = ["v4"] }
+
 [dependencies.gluesql]
 git = "https://github.com/gluesql/gluesql.git"
 rev = "608976b"
