Add csv-storage based logger to tui

--- a/tui/Cargo.toml
+++ b/tui/Cargo.toml
@@ -7,6 +7,7 @@ license.workspace = true
 
 [dependencies]
 glues-core.workspace = true
+gluesql.workspace = true
 cursive = "0.20.0"
 cursive_tree_view = "0.8.0"
 futures = "0.3.30"
