Implement remove_directory action

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -8,4 +8,5 @@ license.workspace = true
 [dependencies]
 gluesql.workspace = true
 thiserror = "1.0.61"
+async-recursion = "1.1"
 uuid = { version = "1.8.0", features = ["v4"] }
