Update core/Cargo.toml - add description

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -4,6 +4,7 @@ authors.workspace = true
 version.workspace = true
 edition.workspace = true
 license.workspace = true
+description = "Headless state management module for Glues Notes"
 
 [dependencies]
 gluesql.workspace = true
