--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,7 @@
 [workspace]
 resolver = "2"
-members = [
-  "tui",
-  "core",
-]
-default-members = [
-  "tui",
-  "core",
-]
+members = ["tui", "core"]
+default-members = ["tui", "core"]
 
 [workspace.package]
 authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
@@ -17,13 +11,14 @@ license = "Apache-2.0"
 
 [workspace.dependencies]
 glues-core = { path = "./core", version = "0.1.0" }
+gluesql-git-storage = "0.16.0"
 
 [workspace.dependencies.gluesql]
 version = "0.16.0"
-default_features = false
+default-features = false
 features = [
-  "gluesql_memory_storage",
-  "gluesql-csv-storage",
-  "gluesql-json-storage",
-  "gluesql-file-storage",
+    "gluesql_memory_storage",
+    "gluesql-csv-storage",
+    "gluesql-json-storage",
+    "gluesql-file-storage",
 ]
