--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -13,3 +13,4 @@ thiserror = "1.0.61"
 async-trait = "0.1"
 async-recursion = "1.1"
 uuid = { version = "1.10", features = ["v7"] }
+strum_macros = "0.26.4"
