--- a/tui/Cargo.toml
+++ b/tui/Cargo.toml
@@ -4,7 +4,7 @@ authors.workspace = true
 version.workspace = true
 edition.workspace = true
 license.workspace = true
-description = "TUI-based note-taking application supporting multiple formats (git, CSV, JSON) for data storage"
+description = "Lightweight TUI note-taking app with Git, CSV, and JSON support - privacy-focused and sync-enabled"
 
 [dependencies]
 glues-core.workspace = true
