Update tui/Cargo.toml - add readme & keywords

--- a/tui/Cargo.toml
+++ b/tui/Cargo.toml
@@ -6,6 +6,8 @@ edition.workspace = true
 license.workspace = true
 repository.workspace = true
 description = "Lightweight TUI note-taking app with Git, CSV, and JSON support - privacy-focused and sync-enabled"
+readme = "../README.md"
+keywords = ["tui", "note-taking", "terminal-based", "notes-app", "cursive", "privacy"]
 
 [dependencies]
 glues-core.workspace = true
