--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "2"
-members = ["ratatui", "core"]
-default-members = ["ratatui", "core"]
+members = ["tui", "core"]
+default-members = ["tui", "core"]
 
 [workspace.package]
 authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
