Replace async runtime from async-io to tokio

--- a/tui/Cargo.toml
+++ b/tui/Cargo.toml
@@ -13,10 +13,9 @@ default-run = "glues"
 [dependencies]
 glues-core.workspace = true
 gluesql.workspace = true
-futures = "0.3.30"
-async-io = "2.3.2"
 ratatui = "0.28.1"
 color-eyre = "0.6.3"
 tui-big-text = "0.6.0"
 tui-textarea = "0.6.1"
 home = "0.5.9"
+tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
