--- a/tui/Cargo.toml
+++ b/tui/Cargo.toml
@@ -5,9 +5,9 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
-description = "Lightweight TUI note-taking app with Git, MongoDB, CSV, and JSON support - privacy-focused and sync-enabled"
+description = "Vim-inspired TUI note-taking app with Git, MongoDB, CSV, and JSON support - privacy-focused and sync-enabled"
 readme = "../README.md"
-keywords = ["tui", "note-taking", "notes-app", "ratatui", "data-privacy"]
+keywords = ["tui", "note-taking", "vim", "ratatui", "data-privacy"]
 default-run = "glues"
 
 [dependencies]
