--- a/tui/Cargo.toml
+++ b/tui/Cargo.toml
@@ -19,3 +19,4 @@ tui-big-text = "0.7.0"
 tui-textarea = "0.7.0"
 home = "0.5.9"
 tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
+throbber-widgets-tui = "0.8.0"
