Update editor to instant save on tab close

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -10,8 +10,8 @@ description = "Headless state management module for Glues Notes"
 [dependencies]
 gluesql.workspace = true
 gluesql-mongo-storage = "0.16.2"
+async-recursion.workspace = true
 thiserror = "1.0.61"
 async-trait = "0.1"
-async-recursion = "1.1.1"
 uuid = { version = "1.10", features = ["v7"] }
 strum_macros = "0.26.4"
