--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ repository = "https://github.com/gluesql/glues"
 
 [workspace.dependencies]
 glues-core = { path = "./core", version = "0.5.1" }
+async-recursion = "1.1.1"
 
 [workspace.dependencies.gluesql]
 version = "0.16.2"
