--- a/tui/Cargo.toml
+++ b/tui/Cargo.toml
@@ -13,6 +13,7 @@ default-run = "glues"
 [dependencies]
 glues-core.workspace = true
 gluesql.workspace = true
+async-recursion.workspace = true
 ratatui = "0.29.0"
 color-eyre = "0.6.3"
 tui-big-text = "0.7.0"
