--- a/tui/Cargo.toml
+++ b/tui/Cargo.toml
@@ -21,5 +21,6 @@ tui-textarea = "0.7.0"
 home = "0.5.9"
 tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
 arboard = "3.4.1"
+textwrap = "0.16"
 clap = { version = "4.5.4", features = ["derive"] }
 once_cell = "1.19"
