--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -15,3 +15,6 @@ thiserror = "1.0.61"
 async-trait = "0.1"
 uuid = { version = "1.10", features = ["v7"] }
 strum_macros = "0.26.4"
+
+[dev-dependencies]
+tokio = { version = "1.41.0", features = ["macros", "rt"] }
