--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -21,3 +21,6 @@ tokio = { version = "1", features = ["rt", "macros"] }
 
 [dev-dependencies]
 tokio = { version = "1.41.0", features = ["macros", "rt"] }
+axum = "0.7"
+tiny_http = "0.12"
+serde_json = "1.0"
