--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -15,6 +15,12 @@ thiserror = "1.0.61"
 async-trait = "0.1"
 uuid = { version = "1.10", features = ["v7"] }
 strum_macros = "0.26.4"
+serde = { version = "1.0", features = ["derive"] }
+reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+tokio = { version = "1", features = ["rt", "macros"] }
 
 [dev-dependencies]
 tokio = { version = "1.41.0", features = ["macros", "rt"] }
+axum = "0.7"
+tiny_http = "0.12"
+serde_json = "1.0"
