--- a/tui/Cargo.toml
+++ b/tui/Cargo.toml
@@ -10,6 +10,9 @@ readme = "../README.md"
 keywords = ["tui", "note-taking", "vim", "ratatui", "data-privacy"]
 default-run = "glues"
 
+[lib]
+path = "src/lib.rs"
+
 [dependencies]
 glues-core.workspace = true
 gluesql.workspace = true
@@ -24,3 +27,6 @@ arboard = "3.4.1"
 textwrap = "0.16"
 clap = { version = "4.5.4", features = ["derive"] }
 once_cell = "1.19"
+
+[dev-dependencies]
+insta = { version = "1", features = ["redactions"] }
