--- a/tui/Cargo.toml
+++ b/tui/Cargo.toml
@@ -10,11 +10,16 @@ readme = "../README.md"
 keywords = ["tui", "note-taking", "vim", "ratatui", "data-privacy"]
 default-run = "glues"
 
+[[bin]]
+name = "glues-web"
+path = "src/bin/web.rs"
+
 [dependencies]
 glues-core.workspace = true
 gluesql.workspace = true
 async-recursion.workspace = true
 ratatui = "0.29.0"
+ratzilla = "0.1.0"
 color-eyre = "0.6.3"
 tui-big-text = "0.7.0"
 tui-textarea = "0.7.0"
@@ -24,3 +29,4 @@ arboard = "3.4.1"
 textwrap = "0.16"
 clap = { version = "4.5.4", features = ["derive"] }
 once_cell = "1.19"
+
