--- a/tui/Cargo.toml
+++ b/tui/Cargo.toml
@@ -18,7 +18,7 @@ path = "src/bin/web.rs"
 glues-core.workspace = true
 gluesql.workspace = true
 async-recursion.workspace = true
-ratatui = "0.29.0"
+ratatui = { version = "0.29.0", default-features = false, features = ["all-widgets"] }
 ratzilla = "0.1.0"
 color-eyre = "0.6.3"
 tui-big-text = "0.7.0"
@@ -29,4 +29,9 @@ arboard = "3.4.1"
 textwrap = "0.16"
 clap = { version = "4.5.4", features = ["derive"] }
 once_cell = "1.19"
+
+[features]
+default = ["desktop"]
+desktop = ["ratatui/crossterm"]
+web = []
 
