--- a/tui/Cargo.toml
+++ b/tui/Cargo.toml
@@ -13,25 +13,33 @@ default-run = "glues"
 [[bin]]
 name = "glues-web"
 path = "src/bin/web.rs"
+required-features = ["web"]
 
 [dependencies]
 glues-core.workspace = true
 gluesql.workspace = true
 async-recursion.workspace = true
 ratatui = { version = "0.29.0", default-features = false, features = ["all-widgets"] }
-ratzilla = "0.1.0"
+ratzilla = { version = "0.1.0", optional = true }
 color-eyre = "0.6.3"
-tui-big-text = "0.7.0"
-tui-textarea = "0.7.0"
-home = "0.5.9"
-tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
-arboard = "3.4.1"
+tui-big-text = { version = "0.7.0", optional = true }
+tui-textarea = { version = "0.7.0", default-features = false, features = ["crossterm"], optional = true }
+home = { version = "0.5.9", optional = true }
+tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"], optional = true }
+arboard = { version = "3.4.1", optional = true }
 textwrap = "0.16"
 clap = { version = "4.5.4", features = ["derive"] }
 once_cell = "1.19"
 
 [features]
 default = ["desktop"]
-desktop = ["ratatui/crossterm"]
-web = []
+desktop = [
+    "ratatui/crossterm",
+    "tui-big-text",
+    "tui-textarea",
+    "tokio",
+    "arboard",
+    "home",
+]
+web = ["ratzilla"]
 
