--- a/tui/Cargo.toml
+++ b/tui/Cargo.toml
@@ -25,7 +25,7 @@ color-eyre = "0.6.3"
 tui-big-text = { version = "0.7.0", optional = true }
 tui-textarea = { version = "0.7.0", default-features = false, features = ["crossterm"], optional = true }
 home = { version = "0.5.9", optional = true }
-tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"], optional = true }
+tokio = { version = "1.41.0", features = ["macros", "rt"], optional = true }
 arboard = { version = "3.4.1", optional = true }
 textwrap = "0.16"
 clap = { version = "4.5.4", features = ["derive"] }
@@ -41,5 +41,5 @@ desktop = [
     "arboard",
     "home",
 ]
-web = ["ratzilla"]
+web = ["ratzilla", "tokio", "ratatui/crossterm"]
 
