test: refresh pty size before snapshot

--- a/tui/Cargo.toml
+++ b/tui/Cargo.toml
@@ -30,3 +30,4 @@ assert_cmd = "2"
 expectrl = "0.7"
 insta = { version = "1", features = ["glob"] }
 vt100 = "0.15"
+nix = { version = "0.26", default-features = false, features = ["signal"] }
