Remove CSV/JSON storage options

--- a/tui/Cargo.toml
+++ b/tui/Cargo.toml
@@ -5,7 +5,7 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
-description = "Vim-inspired TUI note-taking app with Git, MongoDB, CSV, and JSON support - privacy-focused and sync-enabled"
+description = "Vim-inspired TUI note-taking app with Git, MongoDB, and proxy support - privacy-focused and sync-enabled"
 readme = "../README.md"
 keywords = ["tui", "note-taking", "vim", "ratatui", "data-privacy"]
 default-run = "glues"
