--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "2"
-members = ["tui", "core", "server"]
-default-members = ["tui", "core", "server"]
+members = ["tui", "core", "server", "bin/glues"]
+default-members = ["bin/glues", "tui", "core", "server"]
 
 [workspace.package]
 authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
@@ -18,13 +18,6 @@ async-recursion = "1.1.1"
 git = "https://github.com/gluesql/gluesql"
 rev = "7960be640defc8083be6751d3324cf2dd809a645"
 default-features = false
-features = [
-    "gluesql_memory_storage",
-    "gluesql-csv-storage",
-    "gluesql-file-storage",
-    "gluesql-git-storage",
-    "gluesql-mongo-storage",
-]
 
 [profile.release]
 lto = true
