Improve web font, IME, and keyboard handling (#216)
bundle and apply the D2CodingLigature Nerd Font to the web frontend
add a hidden textarea to support IME (CJK) input while preventing default browser shortcuts
adjust DOM span widths and reverse z-order so wide glyphs render above following cells
block browser focus changes on Tab while still dispatching the key to Glues

--- a/tui/Cargo.toml
+++ b/tui/Cargo.toml
@@ -61,3 +61,15 @@ wasm-bindgen-futures = "0.4"
 console_error_panic_hook = "0.1"
 tokio = { version = "1.41.0", features = ["macros", "rt", "sync", "time"] }
 ratatui = { version = "0.29.0", default-features = false }
+web-sys = { version = "0.3", features = [
+    "CssStyleDeclaration",
+    "Document",
+    "EventTarget",
+    "HtmlElement",
+    "HtmlTextAreaElement",
+    "Event",
+    "InputEvent",
+    "KeyboardEvent",
+    "Window",
+    "CompositionEvent",
+] }
