--- a/.github/workflows/deploy-glues-site.yml
+++ b/.github/workflows/deploy-glues-site.yml
@@ -29,7 +29,9 @@ jobs:
         uses: Swatinem/rust-cache@v2
 
       - name: Install trunk
-        run: cargo install trunk --locked --force
+        uses: jetli/trunk-action@v0.5.0
+        with:
+          version: latest
 
       - name: Build web bundle
         run: |
