--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -62,7 +62,9 @@ jobs:
       - name: Check wasm32 target
         run: cargo check --target wasm32-unknown-unknown -p glues-tui
       - name: Install trunk
-        run: cargo install trunk --locked --force
+        uses: jetli/trunk-action@v0.5.0
+        with:
+          version: latest
       - name: Build web bundle
         run: |
           cd tui/web
