--- a/tui/Cargo.toml
+++ b/tui/Cargo.toml
@@ -61,4 +61,7 @@ web-sys = { version = "0.3", features = [
     "KeyboardEvent",
     "Window",
     "CompositionEvent",
+    "Navigator",
+    "Clipboard",
 ] }
+js-sys = "0.3"
