Fix wasm build for redb changes

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -11,7 +11,7 @@ description = "Headless state management module for Glues Notes"
 async-recursion.workspace = true
 thiserror = "1.0.61"
 async-trait = "0.1"
-uuid = { version = "1.18.1", features = ["v7"] }
+uuid = { version = "1.18.1", features = ["v7", "js"] }
 strum_macros = "0.26.4"
 serde = { version = "1.0", features = ["derive"] }
 
