--- a/tui/Cargo.toml
+++ b/tui/Cargo.toml
@@ -65,3 +65,4 @@ web-sys = { version = "0.3", features = [
     "Clipboard",
 ] }
 js-sys = "0.3"
+getrandom = { version = "0.2", features = ["js"] }
