Introduce redb storage option (#235)
add the redb backend to the native core storage stack and wire the entry flow
expose a new [r] redb option in the TUI, persisting the last path and covering it with snapshots
document the storage in the README and refresh entry-related snapshots

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -11,7 +11,7 @@ description = "Headless state management module for Glues Notes"
 async-recursion.workspace = true
 thiserror = "1.0.61"
 async-trait = "0.1"
-uuid = { version = "1.10", features = ["v7"] }
+uuid = { version = "1.18.1", features = ["v7", "js"] }
 strum_macros = "0.26.4"
 serde = { version = "1.0", features = ["derive"] }
 
@@ -25,6 +25,7 @@ gluesql = { workspace = true, features = [
     "gluesql_memory_storage",
     "gluesql-csv-storage",
     "gluesql-file-storage",
+    "gluesql-redb-storage",
     "gluesql-git-storage",
     "gluesql-mongo-storage",
 ] }
