--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -20,7 +20,7 @@ path = "src/main.rs"
 glues-core.workspace = true
 tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "signal"] }
 axum = "0.7"
-clap = { version = "4.5.4", features = ["derive"] }
+clap = { version = "4.5.4", features = ["derive", "env"] }
 color-eyre = "0.6.3"
 tower-http = { version = "0.5", features = ["cors"] }
 tracing = "0.1"
