Update gluesql dependency to 0.18

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,7 @@ glues-core = { path = "./core", version = "0.7.0" }
 async-recursion = "1.1.1"
 
 [workspace.dependencies.gluesql]
-git = "https://github.com/gluesql/gluesql"
-rev = "7960be640defc8083be6751d3324cf2dd809a645"
+version = "0.18"
 default-features = false
 
 [profile.release]
