--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ version = "0.8.0"
 edition = "2024"
 license = "Apache-2.0"
 repository = "https://github.com/gluesql/glues"
+keywords = ["tui", "note-taking", "vim", "ratatui", "data-privacy"]
 
 [workspace.dependencies]
 glues-core = { path = "./core", version = "0.8.0" }
