ci: fix prepare release dispatch inputs

--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -4,14 +4,9 @@ on:
   workflow_dispatch:
     inputs:
       bump:
-        type: choice
-        description: "Version bump increment"
+        description: "Version bump increment (major|minor|patch|custom)"
+        required: true
         default: minor
-        options:
-          - major
-          - minor
-          - patch
-          - custom
       custom_version:
         description: "Explicit version when bump is custom (e.g. 0.8.1)"
         required: false
@@ -69,6 +64,13 @@ jobs:
             cargo set-version --workspace "$CUSTOM_VERSION"
             new_version="$CUSTOM_VERSION"
           else
+            case "$BUMP" in
+              major|minor|patch) ;;
+              *)
+                echo "bump must be one of major, minor, patch, or custom" >&2
+                exit 1
+                ;;
+            esac
             cargo set-version --workspace --bump "$BUMP"
             new_version=$(cargo metadata --no-deps --format-version 1 |
               python -c 'import json,sys; data=json.load(sys.stdin); print(next(p["version"] for p in data["packages"] if p["name"]=="glues"))')
@@ -87,11 +89,7 @@ jobs:
           mkdir -p docs/releases
 
           notes_path="docs/releases/v${RELEASE_VERSION}.md"
-          cat <<EON > "$notes_path"
-# Glues v${RELEASE_VERSION} - Release Notes
-
-## What's Changed
-EON
+          printf "# Glues v%s - Release Notes\n\n## What's Changed\n" "$RELEASE_VERSION" > "$notes_path"
 
           gh api \
             repos/${{ github.repository }}/compare/${compare_ref} \
