--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -10,6 +10,10 @@ on:
       custom_version:
         description: "Explicit version when bump is custom (e.g. 0.8.1)"
         required: false
+      target_ref:
+        description: "Branch or commit to base the release on (defaults to main)"
+        required: false
+        default: main
       previous_ref:
         description: "Reference to compare against (tag/commit). Defaults to last release tag"
         required: false
@@ -26,6 +30,27 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Checkout target ref
+        id: target
+        run: |
+          target="${{ github.event.inputs.target_ref }}"
+          if [ -z "$target" ]; then
+            target="${{ github.event.repository.default_branch }}"
+          fi
+
+          if git rev-parse --verify --quiet "$target"; then
+            git checkout "$target"
+          elif git rev-parse --verify --quiet "origin/$target"; then
+            git checkout "origin/$target"
+          else
+            echo "target ref '$target' not found" >&2
+            exit 1
+          fi
+
+          sha=$(git rev-parse HEAD)
+          echo "ref=$target" >> "$GITHUB_OUTPUT"
+          echo "sha=$sha" >> "$GITHUB_OUTPUT"
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
@@ -93,7 +118,7 @@ jobs:
           owner="${GITHUB_REPOSITORY%%/*}"
           repo="${GITHUB_REPOSITORY##*/}"
 
-          compare_json=$(gh api repos/${owner}/${repo}/compare/${PREVIOUS_REF}...${GITHUB_SHA})
+          compare_json=$(gh api repos/${owner}/${repo}/compare/${PREVIOUS_REF}...${{ steps.target.outputs.sha }})
           commit_shas=$(echo "$compare_json" | jq -r '.commits[].sha')
 
           pr_lines=""
