--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -26,6 +26,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          fetch-tags: true
 
       - name: Checkout target ref
         id: target
@@ -33,9 +34,9 @@ jobs:
           DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
         run: |
           target="$DEFAULT_BRANCH"
-          git fetch origin "$target" --depth=1
           git checkout "$target"
           git pull --ff-only origin "$target"
+          git fetch --tags --force
 
           sha=$(git rev-parse HEAD)
           echo "ref=$target" >> "$GITHUB_OUTPUT"
