--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -4,15 +4,9 @@ on:
   workflow_dispatch:
     inputs:
       bump:
-        description: "Version bump increment (major|minor|patch|custom)"
+        description: "Version bump increment (major|minor|patch)"
         required: true
         default: minor
-      custom_version:
-        description: "Explicit version when bump is custom (e.g. 0.8.1)"
-        required: false
-      previous_ref:
-        description: "Reference to compare against (tag/commit). Defaults to last release tag"
-        required: false
 
 jobs:
   prepare:
@@ -54,16 +48,13 @@ jobs:
       - name: Resolve previous reference
         id: refs
         run: |
-          if [ -n "${{ github.event.inputs.previous_ref }}" ]; then
-            echo "previous=${{ github.event.inputs.previous_ref }}" >> "$GITHUB_OUTPUT"
+          if git describe --tags --abbrev=0 >/tmp/last_tag 2>/dev/null; then
+            last_tag=$(cat /tmp/last_tag)
           else
-            if git describe --tags --abbrev=0 >/tmp/last_tag 2>/dev/null; then
-              last_tag=$(cat /tmp/last_tag)
-            else
-              last_tag=$(git rev-list --max-parents=0 HEAD | tail -n 1)
-            fi
-            echo "previous=$last_tag" >> "$GITHUB_OUTPUT"
+            echo "✗ No tags available to determine previous release" >&2
+            exit 1
           fi
+          echo "previous=$last_tag" >> "$GITHUB_OUTPUT"
 
       - name: Determine release version
         id: version
@@ -71,25 +62,16 @@ jobs:
           BUMP: ${{ github.event.inputs.bump }}
           CUSTOM_VERSION: ${{ github.event.inputs.custom_version }}
         run: |
-          if [ "$BUMP" = "custom" ]; then
-            if [ -z "$CUSTOM_VERSION" ]; then
-              echo "custom_version input is required when bump is custom" >&2
+          case "$BUMP" in
+            major|minor|patch) ;;
+            *)
+              echo "bump must be one of major, minor, or patch" >&2
               exit 1
-            fi
-            cargo set-version --workspace "$CUSTOM_VERSION"
-            new_version="$CUSTOM_VERSION"
-          else
-            case "$BUMP" in
-              major|minor|patch) ;;
-              *)
-                echo "bump must be one of major, minor, patch, or custom" >&2
-                exit 1
-                ;;
-            esac
-            cargo set-version --workspace --bump "$BUMP"
-            new_version=$(cargo metadata --no-deps --format-version 1 |
-              python -c 'import json,sys; data=json.load(sys.stdin); print(next(p["version"] for p in data["packages"] if p["name"]=="glues"))')
-          fi
+              ;;
+          esac
+          cargo set-version --workspace --bump "$BUMP"
+          new_version=$(cargo metadata --no-deps --format-version 1 |
+            python -c 'import json,sys; data=json.load(sys.stdin); print(next(p["version"] for p in data["packages"] if p["name"]=="glues"))')
 
           echo "version=$new_version" >> "$GITHUB_OUTPUT"
 
